--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <nav>
         <a href="pag/form.html">00 - Formulario</a>   |     
         <a href="pag/texto1.html">01 - Texto</a>   |    
+        <a href="pag/doQC.html">02 - QC</a>   |
+        <a href="pag/pronto.html">03 - Com Correção</a>   |
+
                 
 
 
