--- a/pag/pronto.html
+++ b/pag/pronto.html
@@ -3,7 +3,7 @@
 <html>
 <meta http-equiv=Content-Language content=pt-br>
 <head><meta name="viewport" content="width=device-width">
-<title>Simulado Detran , prova teorica</title>
+<title>Simulado, prova teorica</title>
 
 <h1>Simulado</h1>
 
@@ -57,7 +57,7 @@
 
 
 <P align="center"><FONT COLOR="#000066" size="2" face="Verdana, Arial, Helvetica, sans-serif">Aqui 
-    está o nosso simulado com&nbsp; 20 perguntas. Assinale a alternativa que 
+    está o simulado com&nbsp; 20 perguntas. Assinale a alternativa que 
     voc&ecirc; achar correta.<br>
             Veja o resultado no final desta p&aacute;gina clicando sobre &quot;corrigir&quot; 
             ou se preferir pegue o gabarito e corrija manualmente.</FONT> 
